<resources>
    <string name="app_name">OT Management</string>

    <string name="preference_file_key">Preference</string>
    <string name="user_id">userid</string>
    <string name="user_pw">passwd</string>

    <string name="login_id">아이디</string>
    <string name="login_password">비밀번호</string>
    <string name="button_login">로그인</string>
    <string name="button_logout">로그아웃</string>


    <string name="button_product_info">제품 정보 보기</string>
    <string name="button_customer_info">고객 정보 보기</string>
    <string name="menu_region">Region</string>
    <string name="button_check">조회</string>

    <string-array name="regions_array">
        <item>Europe</item>
        <item>Americas</item>
        <item>Asia</item>
        <item>Middle East and Africa</item>
    </string-array>
</resources>